@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2018 IBM Corp. and others
+ * Copyright (c) 2006, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -89,7 +89,7 @@ public class Caa {
          * of registers found */
         String s = System.getProperty("zebedee.where.skip");
         if (s != null) {
-            whereSkip = new Integer(s).intValue();
+            whereSkip = Integer.parseInt(s);
         }
     }
 
@@ -142,7 +142,7 @@ public class Caa {
             caaTemplate = new Caa32Template();
             String s = space.getDump().getProductRelease();
             if (s != null) {
-                int release = new Integer(s).intValue();
+                int release = Integer.parseInt(s);
                 if (release >= 11) {
                     caaTemplate = new Caa32_11Template();
                     log.fine("switched to new caa format");
@@ -156,7 +156,7 @@ public class Caa {
             caaTemplate = new Caa64Template();
             String s = space.getDump().getProductRelease();
             if (s != null) {
-                int release = new Integer(s).intValue();
+                int release = Integer.parseInt(s);
                 if (release >= 11) {
                     caaTemplate = new Caa64_11Template();
                     log.fine("switched to new caa format");
@@ -167,7 +167,7 @@ public class Caa {
             caaTemplate = new Caa32Template();
             String s = space.getDump().getProductRelease();
             if (s != null) {
-                int release = new Integer(s).intValue();
+                int release = Integer.parseInt(s);
                 if (release >= 11) {
                     caaTemplate = new Caa32_11Template();
                     log.fine("switched to new caa format");
@@ -855,7 +855,7 @@ public class Caa {
     public Edb getEdb() {
         if (edb == null) {
             try {
-                Long edbkey = new Long(ceecaaedb());
+                Long edbkey = Long.valueOf(ceecaaedb());
                 edb = (Edb)space.getUserMap().get(edbkey);
                 if (edb == null) {
                     /* We are the first Caa in this Edb */
