@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2019 IBM Corp. and others
+ * Copyright (c) 2004, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -261,13 +261,13 @@ public class TestSuite {
 					if (tokens.isEmpty()) {
 						varStartIndex = i + 1;
 					}
-					tokens.push(new Character('$'));
+					tokens.push(Character.valueOf('$'));
 				}
 				break;
 				
 			case '{':
 				if (!tokens.isEmpty()) {
-					tokens.push(new Character('{'));
+					tokens.push(Character.valueOf('{'));
 				}
 				break;
 				
@@ -357,7 +357,7 @@ public class TestSuite {
 					if (tokens.isEmpty()) {
 						varStartIndex = i + 1;
 					}
-					tokens.push(new Character('$'));
+					tokens.push(Character.valueOf('$'));
 				}
 				break;
 				
@@ -365,7 +365,7 @@ public class TestSuite {
 				if (tokens.isEmpty()) {
 					varStartIndex = i + 1;
 				}
-				tokens.push(new Character('{'));
+				tokens.push(Character.valueOf('{'));
 				break;
 				
 			case '}':
